# openai-reasoning-guard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  THIRD_PARTY_NOTICES.md  config.example.json
.github/workflows/: linux-packages.yml  qt-sdk.yml
assets/: app_resources.qrc  openai-reasoning-guard.rc.in
docs/: ARCHITECTURE.md  OPTIMIZATION_ITEMS.md
scripts/: archive-qt-sdk.ps1  archive-qt-sdk.sh  build-qt5-linux-sdk.sh  build-qt5-macos-sdk.sh  build-qt5-windows-mingw-sdk.sh  build-qt5-windows-sdk.ps1  check-release-assets.sh  create-debian-test-image.sh  download-linux-release-assets.sh  package-linux.sh  package-macos.sh  package-windows-mingw.sh  package-windows.ps1  restart-gui.sh  test-linux-packages-docker.sh  toolchain-mingw.cmake
src/cli/: main.cpp
src/core/: app_config.cpp  app_config.h  http_proxy_server.cpp  http_proxy_server.h  json_utils.cpp  json_utils.h
src/gui/: app_icon.h  main.cpp  main_window.cpp  main_window.h
tests/: http_proxy_server_test.cpp  qui_widget_test.cpp
